@@ -4,6 +4,7 @@
 
 * Fix importing of child modules in large maven projects
 * Resolve issue with exceptions adding issues with very long summaries - Issue:104
+* Fix issue where search results could crash if matched keywords were substrings of others
 
 2.1-beta1
 
